<resources>
    <string name="app_name">জানাযার নামাজের নিয়ম</string>
    <string name="dev_youtube_adrs_browser">https://www.youtube.com/</string>
    <string name="feedback">প্রতিক্রিয়া জানান</string>
    <string name="rate">৫ স্টার দিন</string>
    <string name="rate_title">অ্যাপটি মূল্যায়ন করুন</string>
    <string name="more_free">আরও ফ্রি অ্যাপস্‌</string>
    <string name="quit">অব্যাহতি</string>
    <string name="share_this_app">অ্যাপটি শেয়ার করুন</string>
    <string name="about_this_app">অ্যাপটি সম্পর্কে জানুন</string>
    <string name="app_link"></string>
    <string name="alternate_app_link"></string>
    <string name="awesome_app">এই অ্যাপটি অসাধারণ!\n         বিস্তারিত </string>
    <string name="app_sharing_subject">Sample App</string>
    <string name="share_app">অ্যাপটি ভাগাভাগি মাধ্যম</string>
    <string name="developer_page"></string>
    <string name="alternate_dev_page"></string>
    <string name="rate_message">আপনি যদি অ্যাপটি ব্যবহারে একটুও উপকৃত হন, তাহলে দয়া করে কিছু মুহূর্ত অ্যাপটি মূল্যায়নে ব্যয় করবেন? ৫ স্টার রেটিং দিতে ১
        মিনিটের বেশি লাগবে না। আপনার সাপোর্টের জন্য ধন্যবাদ।</string>
    <string name="rate_positive">এখনই রেটিং দিন</string>
    <string name="rate_remind_later">পরে</string>
    <string name="rate_never">না, ধন্যবাদ</string>
    <string name="developer_name">Fati APPS STudio </string>
    <string name="developer_detail">উদ্যোক্তা, বাংলাদেশ</string>
    <string name="developer_message">আপনার যদি অ্যাপটি ভালো লাগে, তবে বন্ধুদের সাথে শেয়ার করুন,
        ৫ স্টার রেটিং দিন এবং আপনার সাপোর্ট প্রকাশ করুন।</string>
    <string name="dev_at_youtube">ইউটিউবে আমি</string>
    <string name="dev_at_twitter">টুইটারে আমি</string>
    <string name="dev_twitter_adrs"></string>
    <string name="click_again">প্রস্থান করতে দয়া করে আবারও পিছন বাটনে চাপ দিন</string>
    <string name="version_code">ভার্সণঃ ১.০.২</string>
    <string name="details">বিস্তারিত</string>
    <string name="previous_button_text">পুর্বে</string>
    <string name="next_button_text"> পরবর্তী</string>
    <string name="share_person">এই টপিকটি শেয়ার করুন</string>
    <string-array name="name_bank">
        <item>&lt;b&gt;মৃত্যুকালীন সময়ে করণীয় কাজ  &lt;/b&gt; </item>
        <item>&lt;b&gt;মৃত্যুর পরে করণীয় কাজ &lt;/b&gt;</item>
        <item>&lt;b&gt;জানাযার নামাজ পড়ার নিয়ম &lt;/b&gt;</item>
        <item>&lt;b&gt;ছয়টি ওয়াজিব সমূহ&lt;/b&gt;</item>
        <item>&lt;b&gt;পাঁচটি সুন্নাত সমূহ &lt;/b&gt;</item>
        <item>&lt;b&gt;জানাযার পূর্বে করণীয় &lt;/b&gt;</item>
        <item>&lt;b&gt;জানাযার নামাজের নিয়ম &lt;/b&gt;</item>
        <item>&lt;b&gt;কে করবে ইমামতি &lt;/b&gt;</item>
        <item>&lt;b&gt;জানাযার ছালাতের বিবরণ &lt;/b&gt;</item>
        <item>&lt;b&gt;জানাযা বিষয়ে সতর্কতা  &lt;/b&gt;</item>
        <item>&lt;b&gt;জানাযার দোয়া &lt;/b&gt;</item>
        <item>&lt;b&gt;মৃত শিশু হ’লে করনীয় &lt;/b&gt;</item>
        <item>&lt;b&gt;জানাযার নামাজের ফযীলত &lt;/b&gt;</item>
    </string-array>
    <string name="banner_youtube_marketing">ca-app-pub-5484472268341859/7886382500</string>
</resources>