<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/eight_dp_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_dvme"
            android:contentDescription="@string/developer_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/developer_name"
            android:textSize="@dimen/text_twenty_four_sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/developer_detail"
            android:textSize="@dimen/text_fourteen_sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dp_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/developer_message"
            android:textSize="@dimen/text_fourteen_sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/version_code"
            android:textSize="@dimen/text_fourteen_sp"/>

        <Button
            android:id="@+id/dev_at_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:drawableLeft="@drawable/ic_youtube"
            android:drawableStart="@drawable/ic_youtube"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/dev_at_youtube"
            android:background="@drawable/button_square"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/dev_at_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:drawableLeft="@drawable/ic_twitter"
            android:drawableStart="@drawable/ic_twitter"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/dev_at_twitter"
            android:background="@drawable/button_square"
            android:textColor="@color/white"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
