<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v4.view.ViewPager
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/activity_person_pager_view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/banner_ads"
            ads:adUnitId="@string/banner_youtube_marketing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            android:layout_gravity="center">
        </com.google.android.gms.ads.AdView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/two_dp_margin">

            <Button
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/four_dp_margin"
                android:layout_weight="1"
                android:background="@drawable/button_square"
                android:drawableLeft="@drawable/ic_previous_button"
                android:drawableStart="@drawable/ic_previous_button"
                android:text="@string/previous_button_text"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded"/>

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@drawable/button_oval"
                android:src="@drawable/ic_share"
                tools:ignore="ContentDescription"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/four_dp_margin"
                android:layout_weight="1"
                android:background="@drawable/button_square"
                android:drawableEnd="@drawable/ic_next_button"
                android:drawableRight="@drawable/ic_next_button"
                android:text="@string/next_button_text"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded"/>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>